# gelfsid-itacambira

./: main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/: config.py
src/backend/: api.py  freeze.py  pdfgen.py  static.py  template.py  utils.py  watcher.py
src/backend/api/: __init__.py  base.py  clipboard.py  files.py  pdf.py  window.py
src/frontend/: base.html  contextmenu.html  index.html  titlebar.html
src/frontend/static/css/: input.css  resize.css  style.css
src/frontend/static/js/: main.js  resize.js
